kubernates/nginx-example/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sandbox-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sandbox
  template:
    metadata:
      labels:
        app: sandbox
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
          - containerPort: 80
