kubernates/nginx-example/service.yml
apiVersion: v1
kind: Service
metadata:
  name: sandbox
spec:
  selector:
    app: sandbox
  ports:
    - port: 9080
      targetPort: 80
